reformat, fix many to many, cleanup outputter
- removes datamodel codegen time stamp
- fixes many to many gen using source instead of target table
- update example with many-to-many join in schema + codegen
- update flake deps

--- a/examples/sqlmodel-generator/Makefile
+++ b/examples/sqlmodel-generator/Makefile
@@ -1,4 +1,5 @@
 define generate_json
+	# note we strip $ref to prevent it leading to circular references
 	jsonnet $< | jq -S | tee $@
 	check-jsonschema --check-metaschema $@
 endef
@@ -26,6 +27,7 @@ schemas/%.schema.json: generators/%.schema.jsonnet
 schemas: \
 	schemas/timestamped-record.schema.json \
 	schemas/device.schema.json \
+	schemas/tag.schema.json \
 	schemas/versioned-schema.schema.json
 
 models/TimestampedRecord.py: schemas/timestamped-record.schema.json
@@ -35,13 +37,16 @@ models/TimestampedRecord.py: schemas/timestamped-record.schema.json
 models/Device.py: schemas/device.schema.json
 	$(call generate_model,$<,$@)
 
+models/Tag.py: schemas/tag.schema.json
+	$(call generate_model,$<,$@)
+
 models/VersionedSchema.py: schemas/versioned-schema.schema.json
 	$(call generate_model,$<,$@)
 
 models: \
 	models/SQLModel_models.py
 
-models/SQLModel_models.py: schemas/timestamped-record.schema.json schemas/device.schema.json schemas/versioned-schema.schema.json
+models/SQLModel_models.py: schemas/timestamped-record.schema.json schemas/device.schema.json schemas/versioned-schema.schema.json schemas/tag.schema.json
 	python ../../BorderScreama/sqlmodel_codegen.py --schema-paths $^ | \
 		tee $@
 
